k8s_helm_charts/keycloak_auth/keycloak-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    # https://github.com/bitnami/charts/issues/6940
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-buffer-size: "1m"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-pass-headers: "Authorization"
    nginx.org/server-snippets: |
      location / {
        proxy_set_header X-Forwarded-Scheme https;
        proxy_set_header X-Forwarded-Proto https;
        proxy_set_header X-Forwarded-Port 443;
        proxy_set_header Host $host;
        proxy_set_header X-Forwarded-For $proxy_protocol_addr;
      }
  name: keycloak-ingress
  namespace: keycloak
spec:
  ingressClassName: nginx
  rules:
  - host: keycloak.opsteamlab.net
    http:
      paths:
      - backend:
          service:
            name: keycloak-http
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
